Animated Strip-Time doesnt update #36385

Closed
opened 2013-08-05 13:31:22 +02:00 by step-ani-motion · 14 comments

%%%--- Operating System, Graphics card ---
Windows 7 64bit, Geforce 690 GTX

- Blender version with error ---

2.68.1 r58588

- Short description of error ---

When a NLA-Strip is animated over the Strip-Time, the animation is not correctly
updated when the animation is aborted with esc. It seems there is an update call
missing. This was a problem in our pipeline when the scene is send to our renderfarm.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open the attached blendfile -> play animation -> press esc
The cube should now jump back to its original starting position, but instead it stays
at the last played frame.

%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit, Geforce 690 GTX - Blender version with error --- 2.68.1 r58588 - Short description of error --- When a NLA-Strip is animated over the Strip-Time, the animation is not correctly updated when the animation is aborted with esc. It seems there is an update call missing. This was a problem in our pipeline when the scene is send to our renderfarm. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open the attached blendfile -> play animation -> press esc The cube should now jump back to its original starting position, but instead it stays at the last played frame. %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%The fact that this even works in most cases is a bit of a miracle/anomaly.

In most cases, when you animate the strip properties, the keyframes for this go directly into to the active action. However, the active action is only really evaluated once "on top of" the NLA Stack - that is, once all the strips have been evaluated = once the strip time has already been used.

A workaround which might work is to pushdown the active action onto the NLA stack, and move the resulting strip to the bottom of the stack (i.e. before any of the strips it affects get animated). This may/may not work, but certainly does have some drawbacks, as it makes it trickier to edit the strip time animation.%%%

%%%The fact that this even works in most cases is a bit of a miracle/anomaly. In most cases, when you animate the strip properties, the keyframes for this go directly into to the active action. However, the active action is only really evaluated once "on top of" the NLA Stack - that is, once all the strips have been evaluated = once the strip time has already been used. A workaround which might work is to pushdown the active action onto the NLA stack, and move the resulting strip to the bottom of the stack (i.e. before any of the strips it affects get animated). This may/may not work, but certainly does have some drawbacks, as it makes it trickier to edit the strip time animation.%%%
Member

%%%What I see is a clear lag on every update, also frame switching (click in nla editor).

Wasn't this just meant to work?%%%

%%%What I see is a clear lag on every update, also frame switching (click in nla editor). Wasn't this just meant to work?%%%

@JoshuaLeung,
even with your workaround the problem is still there.
Please check Animated_Strip_Time_Workaround.blend

@JoshuaLeung, even with your workaround the problem is still there. Please check [Animated_Strip_Time_Workaround.blend](https://archive.blender.org/developer/F29582/Animated_Strip_Time_Workaround.blend)
Member

A quick update on this bug.

Indeed, even with the workaround it doesn't solve the problem. As a result, the only possible/reliable fix for this is to reinstate/complete the original design I had for how this feature is supposed to work. That is, each NLA strip would have a number of its own F-Curves, which are used for animating time and influence (among other things). This way, we would be able to isolate the F-Curves which need to be specifically evaluated before any of the other NLA stack evaluation operations take place, getting rid of the delay problems here.

I've got a WIP patch/branch that implements this functionality (and it works flawlessly as expected). The only really "blocking" issues are:

  1. How to expose these in the UI. Specifically, where to put them in the channel-list hierarchy
  2. The new method is incompatible with animation done in the old way. While it shouldn't break old files, trying to insert a new keyframe on previously keyframed time/influence properties will end up adding keyframes the new way (instead of continuing on with the existing F-Curves)
A quick update on this bug. Indeed, even with the workaround it doesn't solve the problem. As a result, the only possible/reliable fix for this is to reinstate/complete the original design I had for how this feature is supposed to work. That is, each NLA strip would have a number of its own F-Curves, which are used for animating time and influence (among other things). This way, we would be able to isolate the F-Curves which need to be specifically evaluated before any of the other NLA stack evaluation operations take place, getting rid of the delay problems here. I've got a WIP patch/branch that implements this functionality (and it works flawlessly as expected). The only really "blocking" issues are: 1) How to expose these in the UI. Specifically, where to put them in the channel-list hierarchy 2) The new method is incompatible with animation done in the old way. While it shouldn't break old files, trying to insert a new keyframe on previously keyframed time/influence properties will end up adding keyframes the new way (instead of continuing on with the existing F-Curves)

Hey @JoshuaLeung thanks for the update!

We just ran into this bug again and I would like to ask if you made any progress on the issues?
Here are some ideas about the blocking issues:

  1. Maybe you could post blocking issue number one to the ui design team?
  2. My understanding is that it has never really worked reliably. So it perhaps wouldn't be such a big deal to break compatibility?
Hey @JoshuaLeung thanks for the update! We just ran into this bug again and I would like to ask if you made any progress on the issues? Here are some ideas about the blocking issues: 1. Maybe you could post blocking issue number one to the ui design team? 2. My understanding is that it has never really worked reliably. So it perhaps wouldn't be such a big deal to break compatibility?

This issue was referenced by 2b4ff142ab

This issue was referenced by 2b4ff142ab542b3ef689e73e18b06f8bfaedf89f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 2b4ff142ab.

Closed by commit 2b4ff142ab.

Added subscriber: @BeornLeonard

Added subscriber: @BeornLeonard

I'd like to report that even though this bug is closed and resolved, it's still present in Blender 2.93

I'd like to report that even though this bug is closed and resolved, it's still present in Blender 2.93
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

In #36385#1305359, @BeornLeonard wrote:
I'd like to report that even though this bug is closed and resolved, it's still present in Blender 2.93

@BeornLeonard : could you open a new report for this?

> In #36385#1305359, @BeornLeonard wrote: > I'd like to report that even though this bug is closed and resolved, it's still present in Blender 2.93 @BeornLeonard : could you open a new report for this?

@lichtwerk Yes, I'm working on a simple example file, and will submit a new bug.

@lichtwerk Yes, I'm working on a simple example file, and will submit a new bug.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36385
No description provided.